<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name_full"
        android:textSize="60sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
    </TextView>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:rotation="180"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        android:src="@drawable/logo">
    </ImageView>

    <EditText
        android:id="@+id/login"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="30dp"
        android:textSize="25sp"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:inputType="text"
        android:hint="@string/login">
    </EditText>

    <EditText
        android:id="@+id/password"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login"
        android:layout_marginTop="10dp"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:textSize="25sp"
        android:inputType="textPassword"
        android:hint="@string/password">
    </EditText>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="250dp"
        android:layout_height="80dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password"
        android:layout_marginTop="20dp"
        android:text="@string/login_action"
        android:textSize="25sp">
    </Button>


</androidx.constraintlayout.widget.ConstraintLayout>